# Android-development

./: .gitignore  DEPLOYMENT_GUIDE.md  QUICK_DEBUG.md  README.md  RUN_APPLICATION.bat  build.gradle  code_uat.md  deploy.bat  gradle.properties  gradlew  gradlew.bat  settings.gradle  setup-environment.bat  test.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/edgedetector/: CameraActivity.java  EdgeDetectorWebSocketServer.java  TestActivity.java  TestWebSocketActivity.java  WebSocketServer.java
app/src/main/res/anim/: pulse_animation.xml  slide_up_fade_in.xml
app/src/main/res/drawable/: gradient_background.xml  ic_websocket.xml  ic_wifi.xml  status_background.xml  status_offline.xml  status_online.xml  websocket_status_background.xml
app/src/main/res/layout/: activity_camera.xml  activity_test_websocket.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gl/: GLRenderer.java
jni/: edge_detector.cpp
web/: package-lock.json  package.json
web/src/: app.ts  connect.html  download.html  index.html  manual.html
